Display some info about the games list

--- a/day-3/index.html
+++ b/day-3/index.html
@@ -6,5 +6,8 @@
   <body>
     <h1>Day 3</h1>
     <p>{{ message }}</p>
+    <div>
+      We have {{ games | length }} games for you!!!!!!
+    </div>
   </body>
 </html>
